feat: Implement cross-platform build system improvements
- Add platform-specific vcpkg triplet support
- Create custom macOS triplet with specific baseline
- Add PowerShell build script for cross-platform support
- Enhance build.sh with platform detection
- Add environment preparation scripts for each platform
- Simplify vcpkg.json with common dependencies
- Update CMakeLists.txt for better platform compatibility
- Update .gitignore for platform-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Debug/
 install/
 bin/
 lib/
+out/
 
 # CMake files
 CMakeCache.txt
@@ -48,5 +49,10 @@ graph_info.json
 
 # Package management
 vcpkg_installed/
+
+# Platform-specific environment markers
+.linux_env_prepared
+.macos_env_prepared
+.windows_env_prepared
 
 venv/
