"Update native app to load image and models from command-line arguments, improve build configuration, and add test script."

--- a/js_lib/CMakeLists.txt
+++ b/js_lib/CMakeLists.txt
@@ -1,15 +1,33 @@
 cmake_minimum_required(VERSION 3.16)
+project(js_lib)
+
+# Find required packages
+find_package(OpenCV REQUIRED)
+find_package(fmt REQUIRED)
+find_package(spdlog REQUIRED)
+find_package(MMDeploy REQUIRED)
+
+# Include FetchContent for downloading tabulate
+include(FetchContent)
+
+# Download tabulate
+FetchContent_Declare(
+    tabulate
+    GIT_REPOSITORY https://github.com/p-ranav/tabulate.git
+    GIT_TAG v1.4
+)
+FetchContent_MakeAvailable(tabulate)
 
 # Create the library
-add_library(js_lib SHARED
-    src/logger.cpp
+add_library(js_lib
+    src/mm_processor.cpp
 )
 
 # Set library properties
 set_target_properties(js_lib PROPERTIES
     VERSION ${PROJECT_VERSION}
     SOVERSION ${PROJECT_VERSION_MAJOR}
-    PUBLIC_HEADER "include/logger.h"
+    PUBLIC_HEADER "include/js_lib/mm_processor.h"
     WINDOWS_EXPORT_ALL_SYMBOLS ON
 )
 
@@ -26,19 +44,26 @@ if(MSVC)
     )
 endif()
 
-# Link dependencies
-target_link_libraries(js_lib
-    PRIVATE
-    spdlog::spdlog
-)
-
-# Include directories
-target_include_directories(js_lib
-    PUBLIC
+# Set include directories
+target_include_directories(js_lib 
+    PUBLIC 
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
+        ${OpenCV_INCLUDE_DIRS}
+        ${CUDA_INCLUDE_DIRS}
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+# Link libraries
+target_link_libraries(js_lib
+    PUBLIC
+        ${OpenCV_LIBS}
+        cudart
+        fmt::fmt
+        spdlog::spdlog
+        tabulate::tabulate
+        mmdeploy
 )
 
 # Install
